# monsoon

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
src/: .gitignore  CMakeLists.txt  compile_release.sh  compile_release_local.sh  sample.opus
src/cmake/: FindOpus.cmake
src/examples/: CMakeLists.txt  main.c  sample.opus
src/include/monsoon/: monsoon.h
src/lib/: CMakeLists.txt  Tornado.cmake  decoder.c
